@@ -121,6 +121,9 @@ This page describes the C++ support in the GCC 6 series.
    </p><p><span class="emphasis"><em>[22.*]</em></span> Anything and everything we have on locale
       implementation will be described under
       <a class="link" href="localization.html#std.localization.locales.locale" title="locale">Localization</a>.
+   </p><p><span class="emphasis"><em>[23.*]</em></span> All of the containers in this clause
+     define <span class="type">size_type</span> as <span class="type">std::size_t</span> and
+     <span class="type">difference_type</span> as <span class="type">std::ptrdiff_t</span>.
    </p><p><span class="emphasis"><em>[26.2.8]/9</em></span> I have no idea what
       <code class="code">complex&lt;T&gt;</code>'s <code class="code">pow(0,0)</code> returns.
    </p><p><span class="emphasis"><em>[27.4.2.4]/2</em></span> Calling
